--- a/ListadoBasicoJS/index.html
+++ b/ListadoBasicoJS/index.html
@@ -19,10 +19,10 @@
 			  <li><a href="adivino.html">ComprobacionHora</a></li>
 			  <li><a href="adivino.html">DeNumericoATexto</a></li>
 		  <li><a href="MultiplicaImpares.html">MultiplicaImpares</a></li>
-			  <li><a href="MediaPositivos.html">MediaPositivos</a></li>
-			  <li><a href="adivino.html">CerosYUnos</a></li>
-			  <li><a href="adivino.html">ProductoPotencias</a></li>
-			  <li><a href="adivino.html">CalculaMedia</a></li>
+		  <li><a href="MediaPositivos.html">MediaPositivos</a></li>
+		  <li><a href="CerosYUnos.html">CerosYUnos</a></li>
+		  <li><a href="ProductoPotencia.html">ProductoPotencias</a></li>
+		  <li><a href="CalculaMedia.html">CalculaMedia</a></li>
 		  <li><a href="MuestraDelUnoAlN.html">MuestraDelUnoAlN</a></li>
 		  <li><a href="Piramide.html">Pirámide</a></li>
 		  <li><a href="PiramideDos.html">PiramideDos</a></li>
