--- a/ListadoBasicoJS/index.html
+++ b/ListadoBasicoJS/index.html
@@ -14,10 +14,10 @@
 		  <li><a href="NumeroPrimo.html">NumeroPrimo</a></li>
 		  <li><a href="NumerosPrimosEnSecuencia.html">NumerosPrimosEnSecuencia</a></li>
 		  <li><a href="OrdenaTres.html">OrdenaTres</a></li>
-			  <li><a href="adivino.html">Decena</a></li>
+		  <li><a href="Decena.html">Decena</a></li>
 			  <li><a href="adivino.html">ComprobacionFecha</a></li>
 			  <li><a href="adivino.html">ComprobacionHora</a></li>
-			  <li><a href="adivino.html">DeNumericoATexto</a></li>
+		  <li><a href="DeNumericoATexto.html">DeNumericoATexto</a></li>
 		  <li><a href="MultiplicaImpares.html">MultiplicaImpares</a></li>
 		  <li><a href="MediaPositivos.html">MediaPositivos</a></li>
 		  <li><a href="CerosYUnos.html">CerosYUnos</a></li>
